@@ -3,6 +3,8 @@ releases are sorted from youngest to oldest.
 
 version <next>:
 - Bitstream filters for editing metadata in H.264, HEVC and MPEG-2 streams
+- Dropped support for OpenJPEG versions 2.0 and below. Using OpenJPEG now
+  requires 2.1 (or later) and pkg-config.
 
 
 version 3.4:
